Fix Off-canvas z-index problem #361

--- a/docs/src/docs.scss
+++ b/docs/src/docs.scss
@@ -25,7 +25,7 @@
   position: fixed;
   right: 0;
   top: 0;
-  z-index: $zindex-2;
+  z-index: $zindex-1;
 
   .btn {
     position: absolute;
