--- a/src/_menus.scss
+++ b/src/_menus.scss
@@ -8,7 +8,7 @@
   min-width: $control-width-xs;
   padding: $unit-2;
   transform: translateY($layout-spacing-sm);
-  z-index: $zindex-1;
+  z-index: $zindex-3;
 
   &.menu-nav {
     background: transparent;
